# ros_basics_vision

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
calibration/: capture_calibration_pictures.py
config/: thymio_tracking_params.yaml
examples/: adaptive_gamma_example.cpp  aruco_detector_example.cpp  ball_detector_example.cpp  setup_detector_example.cpp
include/: aruco_detector.h  ball_detector.h
include/ros_basics_vision/: aruco_detector.h  frame_info.hpp
launch/: thymio_simu_vis.launch  thymio_tracker.launch
scripts/: init_camera.sh
src/: adaptive_gamma.cpp  aruco_detector.cpp  ball_detector.cpp  setup_detector.cpp  thymio_simu_tracking_node.cpp  thymio_tracking_node.cpp
